--- a/index.html
+++ b/index.html
@@ -2,20 +2,171 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <style>
+    /* http://meyerweb.com/eric/tools/css/reset/   v2.0b1 | 201101  */
+        html, body, div, span, applet, object, iframe,
+        h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+        a, abbr, acronym, address, big, cite, code,
+        del, dfn, em, img, ins, kbd, q, s, samp,
+        small, strike, strong, sub, sup, tt, var,
+        b, u, i, center,
+        dl, dt, dd, ol, ul, li,
+        fieldset, form, label, legend,
+        table, caption, tbody, tfoot, thead, tr, th, td,
+        article, aside, canvas, details, figcaption, figure,
+        footer, header, hgroup, menu, nav, section, summary,
+        time, mark, audio, video {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            outline: 0;
+            font-size: 100%;
+            font: inherit;
+            vertical-align: baseline;
+        }
+        /* HTML5 display-role reset for older browsers */
+        article, aside, details, figcaption, figure,
+        footer, header, hgroup, menu, nav, section {
+            display: block;
+        }
+        body {
+            line-height: 1;
+        }
+        ol, ul {
+            list-style: none;
+        }
+        blockquote, q {
+            quotes: none;
+        }
+        blockquote:before, blockquote:after,
+        q:before, q:after {
+            content: '';
+            content: none;
+        }
+
+        ins {
+            text-decoration: none;
+        }
+        del {
+            text-decoration: line-through;
+        }
+
+        table {
+            border-collapse: collapse;
+            border-spacing: 0;
+        }
+
+        /* END OF ERIC MEYER'S CSS RESET */
+
+        header {
+            background: #aaa;
+            padding: 20px 0;
+            margin-bottom: 5px;
+            color: #fff;
+        }
+
+        footer {
+            margin-top: 100px;
+            background: #3c3c3c;
+            padding: 20px 0;
+            color: #fff;
+        }
+
+        h1 {
+            color: darkblue;
+            font-family: 'Open Sans', sans-serif, monospace;
+            font-weight: bold;
+            font-size: 2em;
+            margin-left: 5px;
+            margin-bottom: 20px
+        }
+
+        h2 {
+            color: black;
+            font-family: SansSerif, Arial, Courier, Calibri, monospace;
+            font-weight: bold;
+            font-size: 1.5em;
+            margin-left: 5px;
+            margin-bottom: 12px
+        }
+
+        p {
+            color: black;
+            font-family: Arial, Calibri, SansSerif, monospace;
+            font-weight: normal;
+            font-size: 1em;
+            line-height: 150%;
+            margin-left: 5px;
+            margin-bottom: 30px
+        }
+
+        .navigation {
+            color: white;
+            font-family: Arial, Calibri, SansSerif, monospace;
+            font-weight: normal;
+            font-size:1em;
+            padding: 20px;
+        }
+
+        .row {
+            margin: 20px 0;
+        }
+        .row::after {
+            content:"";
+            display:block;
+            clear:both;
+        }
+
+        .col {
+            float: left;
+            box-sizing: border-box;
+            padding: 0 20px;
+            display: inline-block;
+        }
+
+        .col-1 {
+            width: 25%;
+        }
+        .col-2 {
+            width: 50%;
+        }
+        .col-3 {
+            width: 75%;
+        }
+        .col-4 {
+            width: 100%;
+        }
+    </style>
     <title>Christopher Carlson's Web Portfolio</title>
 </head>
 <body>
+
+<header>
+    <div class="container">
+        <nav>
+            <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about_author.html" class="navigation">About the Author</a></li></ul>
+        </nav>
+    </div>
+</header>
     <h1>Christopher Carlson's Web Portfolio</h1>
-    <a href="index.html">Introduction</a>&emsp;<a href="about_author.html">About the Author</a>
     <h2>Introduction</h2>
         <p>Welcome to my online portfolio! My name is Christopher Carlson, and I am currently an application administrator and developer for a fortune 500 company. I am currently pursuing a
             <br>Bachelor's Degree in Information Technology at Loyola University in Chicago, Illinois. I am passionate about web programming and business application development. My resume
             <br>and portfolio will be posted here soon. In my free time, I enjoy traveling and photography. You can view some of my photography by clicking the About the Author link above.</p>
         <p>You can browse this site by clicking the navigation links above. Additional content will be posted soon! Feel free to connect with me through the contact information below.</p>
-        <p>Thank you,
+        <p>Thank you,sss
             <br><br>Chris Carlson
             <br>Cell: 916-893-1115
             <br>Email: <a href="mailto:ccarlson6@luc.edu">ccarlson6@luc.edu</a>
+
+     <footer>
+         <div class="container">
+             <nav>
+                 <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about_author.html" class="navigation">About the Author</a></li></ul>
+             </nav>
+         </div>
+     </footer>
 
 </body>
 </html>
