--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <style>
     /* http://meyerweb.com/eric/tools/css/reset/   v2.0b1 | 201101  */
@@ -67,7 +68,7 @@
         }
 
         footer {
-            margin-top: 100px;
+            margin-top: 50px;
             background: #3c3c3c;
             padding: 20px 0;
             color: #fff;
@@ -78,6 +79,7 @@
             font-family: 'Open Sans', sans-serif, monospace;
             font-weight: bold;
             font-size: 2em;
+            margin-top: 10px;
             margin-left: 5px;
             margin-bottom: 20px
         }
@@ -101,6 +103,12 @@
             margin-bottom: 30px
         }
 
+        .container {
+            max-width: 1140px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
         .navigation {
             color: white;
             font-family: Arial, Calibri, SansSerif, monospace;
@@ -110,7 +118,7 @@
         }
 
         .row {
-            margin: 20px 0;
+            margin: 2px 0;
         }
         .row::after {
             content:"";
@@ -126,47 +134,104 @@
         }
 
         .col-1 {
-            width: 25%;
+            width: 8.33%;
         }
+
         .col-2 {
-            width: 50%;
+            width: 16.66%;
         }
+
         .col-3 {
-            width: 75%;
+            width: 24.99%;
         }
+
         .col-4 {
-            width: 100%;
+            width: 33.32%;
         }
+
+        .col-5 {
+            width: 41.65%;
+            background-color: white;
+        }
+
+        .col-6 {
+            width: 49.98%;
+        }
+
+        .col-7 {
+            width: 58.31%;
+        }
+
+        .col-8 {
+            width: 66.64%;
+        }
+
+        .col-9 {
+            width: 74.97%;
+        }
+
+        .col-10 {
+        width: 83.3%;
+        }
+
+        .col-11 {
+        width: 91.63%;
+        }
+
+        .col-12 {
+        width: 100%;
+        }
+
     </style>
     <title>Christopher Carlson's Web Portfolio</title>
 </head>
 <body>
-
-<header>
+    <header>
+        <div class="container">
+            <nav>
+                <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about_author.html" class="navigation">About the Author</a></li></ul>
+            </nav>
+        </div>
+    </header>
     <div class="container">
-        <nav>
-            <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about_author.html" class="navigation">About the Author</a></li></ul>
-        </nav>
+        <main class="row">
+            <div class="row">
+                <section class="col col-4">
+                    <h1>Christopher Carlson's Web Portfolio</h1>
+                </section>
+            </div>
+            <div class="row">
+                <section class="col col-2">
+                &nbsp;
+                </section>
+            </div>
+            <section class="col col-8">
+                <h2>Introduction</h2>
+            </section>
+            <section class="col col-5">
+                <p>Welcome to my online portfolio! My name is Christopher Carlson, and I am currently an application administrator and developer for a fortune 500 company. I am currently pursuing a
+                    Bachelor's Degree in Information Technology at Loyola University in Chicago, Illinois. I am passionate about web programming and business application development. My resume
+                    and portfolio will be posted here soon. In my free time, I enjoy traveling and photography. You can view some of my photography by clicking the About the Author link above.</p>
+            </section>
+            <section class="col col-2">
+                &nbsp;
+            </section>
+            <section class="col col-5">
+                <p>You can browse this site by clicking the navigation links above. Additional content will be posted soon! Feel free to connect with me through the contact information below.
+                    <br><br>Thank you,
+                    <br><br>Chris Carlson
+                    <br>Cell: 916-893-1115
+                    <br>Email: <a href="mailto:ccarlson6@luc.edu">ccarlson6@luc.edu</a>
+                </p>
+            </section>
+        </main>
     </div>
-</header>
-    <h1>Christopher Carlson's Web Portfolio</h1>
-    <h2>Introduction</h2>
-        <p>Welcome to my online portfolio! My name is Christopher Carlson, and I am currently an application administrator and developer for a fortune 500 company. I am currently pursuing a
-            <br>Bachelor's Degree in Information Technology at Loyola University in Chicago, Illinois. I am passionate about web programming and business application development. My resume
-            <br>and portfolio will be posted here soon. In my free time, I enjoy traveling and photography. You can view some of my photography by clicking the About the Author link above.</p>
-        <p>You can browse this site by clicking the navigation links above. Additional content will be posted soon! Feel free to connect with me through the contact information below.</p>
-        <p>Thank you,sss
-            <br><br>Chris Carlson
-            <br>Cell: 916-893-1115
-            <br>Email: <a href="mailto:ccarlson6@luc.edu">ccarlson6@luc.edu</a>
-
-     <footer>
-         <div class="container">
-             <nav>
-                 <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about_author.html" class="navigation">About the Author</a></li></ul>
-             </nav>
-         </div>
-     </footer>
-
+    <footer>
+        <div class="container">
+            <nav>
+                <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about_author.html" class="navigation">About the Author</a></li></ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
