--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="index.html">Introduction</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="about_author.html">About the Author<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="about.html">About the Author<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://chriscarlson.shutterfly.com/" target=_blank>Additional Photography Works</a>
