--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <header>
         <div class="container">
             <nav>
-                <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about_author.html" class="navigation">About the Author</a></li></ul>
+                <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about.html" class="navigation">About the Author</a></li></ul>
             </nav>
         </div>
     </header>
@@ -229,7 +229,7 @@
     <footer>
         <div class="container">
             <nav>
-                <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about_author.html" class="navigation">About the Author</a></li></ul>
+                <ul><li><a href="index.html" class="navigation">Introduction</a> | <a href="about.html" class="navigation">About the Author</a></li></ul>
             </nav>
         </div>
     </footer>
